tests/expectations/parser/statement/expression_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found ']'
    --> test:1:2
     |
   1 | (];
     |  ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found ')'
    --> test:1:2
     |
   1 | [);
     |  ^""",
    '''
Error [EPAR0370016]: Could not lex the following content: `\y`.
''',
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test:1:6
     |
   1 | (x,y|;
     |      ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '}'
    --> test:1:3
     |
   1 | x[};
     |   ^""",
    """
Error [EPAR0370005]: expected ) -- found ']'
    --> test:1:6
     |
   1 | (x, y];
     |      ^""",
]
